Remove unncessary scrollbar to prevent layout shift

--- a/ngapp/src/app/student/dashboard/dashboard.component.scss
+++ b/ngapp/src/app/student/dashboard/dashboard.component.scss
@@ -22,6 +22,10 @@
     visibility: hidden;
 }
 
+quill-editor > [quill-editor-element] {
+    overflow-y: hidden;
+}
+
 /* Hide the default checkbox */
 input[type="checkbox"] {
     appearance: none;
